# GrindingApp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  architecture.md  build_app.bat  build_app_errors.txt  build_errors.txt  rebuild.bat  vcpkg-configuration.json  vcpkg.json
.claude/: launch.json  settings.json
.claude/agents/: algorithm.md  architect.md  build.md  core.md  doc.md  occ.md  review.md  test.md  ui.md  workflow.md
.claude/rules/: cmake-format.md  data-types.md  design-patterns.md  dll-export.md  doc-sync.md  formatting.md  headers.md  namespaces.md  naming.md  signal-slot.md  testing.md
.qwen/: settings.json
docs/: Detailed Refactoring Design Document.md  Detailed_Refactoring_Design_Document.md  QT_STYLING.md  Simple Refactoring Design Document.md  phase5-delivery.md  urdf-kdl-mapping-notes.md  user-guide.md
docs/refactor_doc/: Phase_2.md  Phase_3.md  Phase_3_1.md  Phase_4.md
docs/superpowers/specs/: 2026-03-27-movement-panel-design.md  2026-03-27-trajectory-execution-design.md  2026-03-27-waypoint-generation-bridge-design.md  2026-04-03-phase5-kinematics-service-design.md
examples/: CMakeLists.txt  README.md  convert_dae_to_stl.cpp  kdl_ik_test.cpp
execute/: main.cpp
model/robot/IRB140/: IRB140.rb.xml  IRB140.robot  IRB140.urdf
model/robot/IRB140/urdf/: IRB140.urdf
model/robot/irb2400/: irb2400.urdf
model/tool/Burr/: Burr.tool  Burr.urdf  Burr.xml  Tool.stl
model/tool/HQ2/: HQ2.tool  HQ2.urdf  HQ2.xml  Tool.stl
model/workpiece/: box.stp
resources/: resources.qrc
src/: CMakeLists.txt  GrindingAppExport.h  GrindingCoreExport.h  MainWindow.cpp  MainWindow.h  OcctViewWidget.cpp  OcctViewWidget.h  RbXmlParser.cpp  RbXmlParser.h  RobotDisplay.cpp  RobotDisplay.h  RobotKinematics.cpp  RobotKinematics.h  StepImporter.cpp  StepImporter.h  StlLoader.cpp  StlLoader.h  UrdfParser.cpp  UrdfParser.h  main.cpp
src/adapters/: CMakeLists.txt
src/adapters/qt_desktop/: CMakeLists.txt
src/application/: CMakeLists.txt
src/core/: CMakeLists.txt  GrindingCoreExport.h  RbXmlParser.cpp  RbXmlParser.h
src/domain/: CMakeLists.txt  DomainConversions.h  DomainExport.h  DomainExports.cpp  Robot.h  Trajectory.h  Waypoint.h  WaypointSet.h
src/foundation/: CMakeLists.txt  Conversions.cpp  Conversions.h  Error.h  FoundationExport.h  Ids.h  JointState.h  Pose.h  Result.h  UnitTypes.h
src/geometry/: CMakeLists.txt
src/kdl/: CMakeLists.txt  GrindingKinematicsExport.h  RobotKinematics.cpp  RobotKinematics.h
src/kinematics/: CMakeLists.txt  EigenSolver.cpp  EigenSolver.h  GrindingKinematicsExport.h  IKinematicsSolver.h  KdlChainBuilder.cpp  KdlChainBuilder.h  KdlSolver.cpp  KdlSolver.h  RobotKinematics.cpp  RobotKinematics.h
src/model_import/: CMakeLists.txt
src/occ/: CMakeLists.txt  GrindingOccExport.h  IWaypointAlgo.h  MeshLoader.cpp  MeshLoader.h  RobotDisplay.cpp  RobotDisplay.h  StepImporter.cpp  StepImporter.h  StlLoader.cpp  StlLoader.h  SurfaceWaypointGen.cpp  SurfaceWaypointGen.h  Trajectory.h  Waypoint.h  WaypointGenerator.cpp  WaypointGenerator.h  WaypointGridAlgo.cpp  WaypointGridAlgo.h  WaypointPlanarAlgo.cpp  WaypointPlanarAlgo.h
src/planning/: CMakeLists.txt  CartesianTrajectoryPlanner.cpp  CartesianTrajectoryPlanner.h  GrindingPlanningExport.h  IKinematicsService.h  ITrajectoryPlanner.h  KdlKinematicsService.cpp  KdlKinematicsService.h  PlanningTypes.h
src/ui/: CMakeLists.txt  Commands.cpp  Commands.h  GrindingUIExport.h  JogPanel.cpp  JogPanel.h  MainWindow.cpp  MainWindow.h  MovementPanel.cpp  MovementPanel.h  OcctViewWidget.cpp  OcctViewWidget.h  RobotController.cpp  RobotController.h  TrajectoryPanel.cpp  TrajectoryPanel.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h  TrajectoryPlayer.cpp  TrajectoryPlayer.h
src/utils/: CMakeLists.txt  GrindingUtilsExport.h  Q.cpp  Q.h  Vector3d.h
tests/: CMakeLists.txt  TestRobotKinematics.cpp
tests/test_foundation/: CMakeLists.txt  TestFoundation.cpp
tests/test_planning/: CMakeLists.txt  TestKdlKinematicsService.cpp  TestRobotKinematics.cpp
translations/: zh_CN.ts
