include_directories(${CMAKE_CURRENT_LIST_DIR})
add_subdirectory(utils)
add_subdirectory(core)
add_subdirectory(occ)
add_subdirectory(kinematics)
add_subdirectory(ui)

add_subdirectory(foundation)
add_subdirectory(domain)
add_subdirectory(model_import)
add_subdirectory(geometry)
add_subdirectory(planning)
add_subdirectory(application)

